# impuzzle

./: .gitignore  CMakeLists.txt  README.md  Readme.md  defines.h  engine.cpp  engine.h  imageimporter.cpp  imageimporter.h  impuzzle.pro  main.cpp  puzzleitem.cpp  puzzleitem.h  qml.qrc  resources.qrc  translantions.qrc
debian/: changelog  control  copyright  rules
languages/: impuzzle2_en.qm  impuzzle2_en.ts  impuzzle2_fi.qm  impuzzle2_fi.ts  impuzzle2_sv.qm  impuzzle2_sv.ts
qml/: FireWorks.qml  GameMenu.qml  GameOverBanner.qml  GameView.qml  ImagePicker.qml  LoadingScreen.qml  MenuButton.qml  SettingsCheckBox.qml  Style.qml  main.qml
src/: aboutdialog.cpp  aboutdialog.h  defines.h  gameview.cpp  gameview.h  imageimporter.cpp  imageimporter.h  impuzzle.desktop  introitem.cpp  introitem.h  main.cpp  mainwindow.cpp  mainwindow.h  newgamedialog.cpp  newgamedialog.h  puzzleitem.cpp  puzzleitem.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  src.pro  statistics.cpp  statistics.h  statisticsdialog.cpp  statisticsdialog.h  trackerfiles.cpp  trackerfiles.h
src/images/: impuzzle.base64
